added the base activities for the final look of the app, ready for avl implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ProverbialPath"
         tools:targetApi="31">
         <activity
+            android:name=".ResultsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReadActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
